--- a/merukaji/package.json
+++ b/merukaji/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
     "@deemlol/next-icons": "^0.1.9",
+    "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
     "@types/react-leaflet": "^2.8.3",
     "axios": "^1.8.4",
