--- a/merukaji/package.json
+++ b/merukaji/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.8.0",
+    "@auth/supabase-adapter": "^1.9.0",
     "@deemlol/next-icons": "^0.1.9",
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/react-leaflet": "^2.8.3",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
