--- a/merukaji/package.json
+++ b/merukaji/package.json
@@ -20,6 +20,8 @@
     "@types/react-leaflet": "^2.8.3",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.488.0",
     "mongodb": "^6.15.0",
     "next": "15.3.0",
