--- a/merukaji/package.json
+++ b/merukaji/package.json
@@ -14,6 +14,7 @@
     "@deemlol/next-icons": "^0.1.9",
     "@google/generative-ai": "^0.24.0",
     "@headlessui/react": "^2.2.1",
+    "@paypal/paypal-js": "^8.2.0",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@supabase/supabase-js": "^2.49.4",
